# service_crm

./: .gitignore  app.py  pyproject.toml
src/: models.py  views.py
src/lib/: __init__.py
tests/: __init__.py
