[tool.poetry]
name = "service-crm"
version = "0.1.0"
description = ""
authors = ["nikulson <nikulshin@mail.ru>"]
readme = "README.md"
packages = [{include = "service_crm"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.1"
flask-restful = "^0.3.9"
flask-sqlalchemy = "<3"
pytest = "^7.2.0"
sqlalchemy = "^1.4.46"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
